PUT/DELETE reqs. ErrorHandling&Validation -DONE
